examples/test/testpolicy16452.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16452
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key16: value12
      key17: value25
      key30: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value25
          key17: value40
          key14: value24
